examples/test/testpolicy14175.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14175
  namespace: namespace484
spec:
  podSelector:
    matchLabels:
      key16: value32
      key28: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value46
          key16: value2
          key21: value6
      podSelector:
        matchLabels:
          key31: value37
          key15: value18
          key19: value0
